--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,12 @@
 <header>
-  <img src="../../assets/logo1.jpg" alt="app logo" class="header-logo">
-  <button mat-button *ngIf="!isLogin" (click)="openLogin()">Login</button>
-  <p *ngIf="isLogin" class="header-welcom">哈囉 {{ petName }} 的飼主！</p>
+  <div class="logo-wrapper">
+    <img src="../../assets/logo1.jpg" alt="app logo" class="header-logo">
+  </div>
+    <div class="header-actions-row">
+    <button class="menu-button" mat-icon-button (click)="emitMenuClick()">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <button mat-button class="login-button" *ngIf="!isLogin" (click)="openLogin()">Login</button>
+    <p *ngIf="isLogin" class="header-welcom">哈囉 {{ petName }} 的飼主！</p>
+  </div>
 </header>
