fix: 修復語音輸入讀取不到問題

--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -30,7 +30,7 @@
       </div>
 
       <!-- 初始提示文字 -->
-      <div class="welcome-text">您好，請問有什麼可以幫助您的呢?</div>
+      <div class="welcome-text">毛孩今天哪裡不舒服呢?</div>
 
       <!-- 輸入區 -->
       <div class="input-area-wrapper centered">
