--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -34,7 +34,10 @@
 
   <!-- 主畫面 -->
   <main class="main-content">
-    <app-user-input #userInput></app-user-input>
+  <div  *ngIf="openingPrompt && !hasTyped" @popInPrompt class="opening-prompt-box">
+    <p class="opening-text">🐾{{ openingPrompt }}</p>
+  </div>
+    <app-user-input (hasTyped)="onUserHasTyped()"></app-user-input>
   </main>
 </div>
 
