--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -30,7 +30,9 @@
       </div>
 
       <!-- 初始提示文字 -->
-      <div class="welcome-text">毛孩今天哪裡不舒服呢?</div>
+      <div class="welcome-text">
+        {{ petName ? petName : '毛孩' }}今天哪裡不舒服呢?
+      </div>
 
       <!-- 輸入區 -->
       <div class="input-area-wrapper centered">
